more contrast fixes for code on hidden-content pg

--- a/_sass/syntax.css
+++ b/_sass/syntax.css
@@ -87,22 +87,22 @@
   font-weight: bold;
 }
 .highlight .mf {
-  color: #009999;
+  color: #007777;
 }
 .highlight .mh {
-  color: #009999;
+  color: #007777;
 }
 .highlight .il {
-  color: #009999;
+  color: #007777;
 }
 .highlight .mi {
-  color: #009999;
+  color: #007777;
 }
 .highlight .mo {
-  color: #009999;
+  color: #007777;
 }
 .highlight .m, .highlight .mb, .highlight .mx {
-  color: #009999;
+  color: #007777;
 }
 .highlight .sb {
   color: #d14;
@@ -147,7 +147,7 @@
   color: #999999;
 }
 .highlight .nb {
-  color: #0086B3;
+  color: #005B7A;
 }
 .highlight .nc {
   color: #445588;
